# fitrat

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/fitrat/: __init__.py
src/fitrat/language_detector/: LanguageDetector.py  __init__.py
src/fitrat/tokenizers/: __init__.py  word_tokenize.py
src/fitrat/transliterators/: transliterator.py  utils.py
src/fitrat/transliterators/cyr_lat/: CyrLatTransliterator.py  alphabet.py  model_compile.py
src/fitrat/transliterators/lat_cyr/: LatCyrTransliterator.py  alphabet.py  model_compile.py
tests/: test_language_detector.py  test_tokenizer.py  test_transliterator.py
